Bug 19483 - Different header buttons text vertical alignment on iPhone and Android

--- a/skins/weborder_mobile/css/header.css
+++ b/skins/weborder_mobile/css/header.css
@@ -1,12 +1,10 @@
 /* buttons (begin) */
 .header_block_buttons {
     height: 1.2em;
+    line-height: 1.2em;
     margin-top: 0.6em;
     position: absolute;
     font-size: 2.8em;
-}
-.header_block_buttons span {
-    vertical-align: middle;
 }
 .header_block_button_left {
     left: 0;
